[project]
name = "pyepo"
version = "1.0.3"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
    "pathos",
    "tqdm",
    "configspace",
    "scikit-learn",
    "torch>=2.9.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=9.1.2"]
pyomo = ["pyomo>=6.1.2"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyepo"]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "pkg"}

[tool.setuptools.packages.find]
where = ["pkg"]
